--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ body {
 }
 
 #header {
-	background-color: #17b6c3;
+	background-color: #1199aa; /* #17b6c3 */
 }
 
 #navigation {
@@ -78,7 +78,7 @@ h1 {
 	float: left;
 	line-height: 60px;
 	padding-left: 30px;
-	ont-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
 
 h2 {
@@ -86,7 +86,7 @@ h2 {
 	float: right;
 	line-height: 60px;
 	padding-right: 30px;
-	ont-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
 
 #body {
@@ -94,23 +94,44 @@ h2 {
 }
 
 .section {
+	/* 
 	background-color: #ffffff;
 	moz-border-radius: 8px;
 	border-radius: 8px;
-	max-width: 960px;
-	margin: 15px auto 15px auto;
-	padding: 30px;
 	-moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
 	-webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
 	box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
+	*/
+	max-width: 810px; /* 960px */
+	margin: 15px auto 15px auto;
+	padding: 30px;
+	
+	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  	-moz-box-shadow: 0px 1px 0px #ffffff; /* Firefox 3.6 and earlier */
+  	-webkit-box-shadow: 0px 1px 0px #ffffff; /* Safari and Chrome */
+  	box-shadow: 0px 1px 0px #ffffff;
+	
 }
 
-h3, h4 {
+h3 {
 	font-family: 'Open Sans', sans-serif;
 	font-style: italic;
-	text-align: center;
-	font-size: 0.75em;
-	line-height: 1.5em;
+	text-align: left;
+	font-size: 2.25em;
+	line-height: 1.25em;
+	font-weight: 100;
+	color: #1199aa;
+	text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.10);
+}
+
+h4 {
+	font-family: 'Open Sans', sans-serif;
+	text-align: right;
+	font-size: 2em;
+	line-height: 1.25em;
+	font-weight: 100;
+	color: #1199aa;
+	text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.10);
 }
 
 h5 {
