--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ h5 {
 	margin-bottom: -0.75em;
 }
 
-p.proposal, h5, li {
+p.text, h5, li {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 0.75em;
 	line-height: 1.5em;
