--- a/css/styles.css
+++ b/css/styles.css
@@ -194,6 +194,7 @@ ul li:before {
 	/* min-height: 120px; */
 	padding-top: 54px;
 	padding-bottom: 54px;
+	margin-top: -31px; /* so you don't see the section divider from Examples */
 }
 
 p.footer {
