c+p code for "hover" on touch device — let's hope this works!

--- a/css/styles.css
+++ b/css/styles.css
@@ -217,7 +217,7 @@ ul li:before {
  	opacity: 0;
 }
 
-.icon:hover .backgroundWrapper {
+.icon:hover .backgroundWrapper, .icon.hover_effect .backgroundWrapper {
 	opacity: 1;
 }
 
