--- a/css/styles.css
+++ b/css/styles.css
@@ -90,14 +90,16 @@ h1 {
 	line-height: 60px;
 	padding-left: 30px;
 	font-family: 'Open Sans', sans-serif;
+	font-weight: 700;
+	letter-spacing: .15em;
 }
 
-h2 {
-	color: #ffffff;
+.navIcons {
+	/* color: #ffffff; */
 	float: right;
 	line-height: 60px;
-	padding-right: 30px;
-	font-family: 'Open Sans', sans-serif;
+	padding: 20px 30px 0 0;
+	/* font-family: 'Open Sans', sans-serif; */
 }
 
 #body {
