--- a/css/styles.css
+++ b/css/styles.css
@@ -151,8 +151,9 @@ h5 {
 	font-family: 'Open Sans Condensed', sans-serif;
 	font-weight: 900;
 	font-size: 2.25em;
-	line-height: 0.5em;
-	padding-bottom: 1em;
+	line-height: 1.1em;
+	margin-top: -.3em;
+	padding-bottom: 0.7em;
 	color: #dddddd;
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
 	text-transform:uppercase;
