--- a/css/styles.css
+++ b/css/styles.css
@@ -282,5 +282,10 @@ a {
 	text-decoration: none;
 }
 
-
+::selection {
+	background: #1199aa; /* Safari */
+	}
+::-moz-selection {
+	background: #1199aa; /* Firefox */
+}
 
